[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ucmdb_rest"
version = "2.0.1"
description = "A modular Python client for the UCMDB REST API"
readme = "README.md"
authors = [
    { name = "Keith Paschal" }
]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0",
]
[tool.ruff]
# The folder where your code lives
src = ["ucmdb_rest"]
# Allow lines to be a bit longer (UCMDB URLs can be long!)
line-length = 100

[tool.ruff.lint]
# Select the rules you want (E = Error, F = Pyflakes, I = Isort)
select = ["E", "F", "I"]

# This part solves your specific problem:
[tool.ruff.lint.per-file-ignores]
# Ignore "Unused Import" (F401) specifically in the tests directory
"tests/*" = ["F401"]