[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ucmdb_rest"
version = "2.0.3"
description = "A modular Python client for the UCMDB REST API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Keith Paschal", email = "kw.paschal@gmail.com" }
]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kwpaschal/ucmdb_rest"
Documentation = "https://kwpaschal.github.io/ucmdb_rest/"

[tool.setuptools.packages.find]
include = ["ucmdb_rest*"]

[tool.ruff]
src = ["ucmdb_rest"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]